--- a/pom.xml
+++ b/pom.xml
@@ -9,8 +9,8 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.stalin</groupId>
-	<artifactId>demo-workshop</artifactId>
-	<version>2.0.2</version>
+	<artifactId>java-apps</artifactId>
+	<version>2.0.3</version>
 	<name>demo-workshop</name>
 	<packaging>jar</packaging>
 	<description>Demo project for Spring Boot</description>
