--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,7 +1,7 @@
 sonar.verbose=true
-sonar.projectKey=ravdy_twittertrend
-sonar.organization=ravdy
-sonar.projectName=twittertrend
+sonar.projectKey= sonar-demo1_sonar-demo1
+sonar.organization= sonar-demo1
+sonar.projectName=sonar-demo1 
 sonar.language=java
 sonar.sourceEncoding=UTF-8
 sonar.sources=.
